Commit al master del blogpost en su versión más reciente

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Aprendiendo Git y Github</title>
 </head>
 <body>
-  <link rel="stylesheet" href="./css/style.css">
-  <h1>Aquí vamos a hacer un blog post</h1>
-  <p>Y este es el párrafo de inicio</p>
+  <div id="container"> 
+    <div id="post">
+      <h1>Este es el título atractivo e interesante del post</h1>
+      <p>Y este es el párrafo de inicio donde vamos a explicar
+        las cosas increíbles que se pueden hacer con ramas</p>
+    </div>
+  </div>
 </body>
 </html>
