--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <h1>Este es el título atractivo e interesante del post</h1>
       <p>Y este es el párrafo de inicio donde vamos a explicar
         las cosas increíbles que se pueden hacer con ramas</p>
-    </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illum ut odit, distinctio non quisquam, itaque consequuntur voluptates minima et illo officiis, veniam sit iusto soluta deleniti velit natus error!
+      </p>
+      </div>
   </div>
 </body>
 </html>
