Agregué suscripción, cambié la cabecera maestra y puse todo azul

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="container"> 
     <div id="cabecera">
       Hyperblog <span id="tagline">
-        Tu blog de confianza
+        Tu blog maestro
       </span>
     </div>
     <div id="post">
@@ -19,6 +19,7 @@
         las cosas increíbles que se pueden hacer con ramas</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illum ut odit, distinctio non quisquam, itaque consequuntur voluptates minima et illo officiis, veniam sit iusto soluta deleniti velit natus error!
       </p>
+      <p>Suscríbete y dale like</p>
       </div>
   </div>
 </body>
