--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       </p>
       <p>Suscríbete y dale like</p>
       </div>
+      <footer id="footer">
+        Hecho con amor en Platzi 💚
+      </footer>
   </div>
 </body>
 </html>
